@@ -2,7 +2,6 @@ package ru.stream;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -23,17 +22,20 @@ public class Analyze {
     }
 
     public static List<Tuple> averageScoreBySubject(Stream<Pupil> stream) {
-        Map<String, Integer> subjects = subjectsTotalScore(stream);
-        return subjects.entrySet().stream()
-                .map(subject ->
-                        new Tuple(subject.getKey(), (double) subject.getValue() / subjects.size()))
-                .collect(Collectors.toList());
+        return stream
+                .flatMap(pupil -> pupil.subjects().stream())
+                .collect(Collectors.groupingBy(Subject::name, Collectors.averagingDouble(Subject::score)))
+                .entrySet()
+                .stream()
+                .map(entry -> new Tuple(entry.getKey(), entry.getValue()))
+                .toList();
     }
 
     public static Tuple bestStudent(Stream<Pupil> stream) {
         List<Tuple> list = stream.map(pupil ->
                         new Tuple(pupil.name(),
-                                pupil.subjects().stream().mapToDouble(Subject::score)
+                                pupil.subjects().stream()
+                                        .mapToDouble(Subject::score)
                                         .sum()))
                 .toList();
         return list.stream()
@@ -42,19 +44,12 @@ public class Analyze {
     }
 
     public static Tuple bestSubject(Stream<Pupil> stream) {
-        Map<String, Integer> subjects = subjectsTotalScore(stream);
-        return subjects.entrySet().stream()
-                .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
+        return stream.flatMap(pupil -> pupil.subjects().stream())
+                .collect(Collectors.groupingBy(Subject::name, Collectors.summingInt(Subject::score)))
+                .entrySet()
+                .stream()
                 .map(subject -> new Tuple(subject.getKey(), subject.getValue()))
                 .max(Comparator.comparing(Tuple::score))
                 .get();
-    }
-
-    private static Map<String, Integer> subjectsTotalScore(Stream<Pupil> stream) {
-        return stream
-                .flatMap(pupil -> pupil.subjects().stream())
-                .collect(Collectors.toMap(Subject::name,
-                        Subject::score,
-                        Integer::sum));
     }
 }
